fixed a lot of spacing and font sizes

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -59,16 +59,21 @@ li
     font-family: "Lato", serif
 
     .top-ad-title
-        color: rgb(180,180,180)
+        color: rgb(170,170,170)
         text-align: center
         grid-column: 2
+        padding-top: 10px
     
     .top-ad-description
         color: black
         text-align: center
         text-width: 50px
         grid-column: 2
-        padding: 0 15px
+        padding: 0 15px 10px 15px
+        font-weight: bold
+        
+    ad-link.a
+        color: blue
 
 
 .aside-text-label
@@ -87,12 +92,13 @@ li
     margin-bottom: 15px
 
 .main-post-description
-    font-size: 25px
+    font-size: 27px
     letter-spacing: 7px
 
 .main-post-preview
     font-size: 15px
     letter-spacing: 1px
+    line-height: 23px
 
 .container2
     font-family: "Lato", serif
@@ -108,10 +114,18 @@ li
         .main-post
 
         .main-list
+            line-height: 35px
 
             .main-list-author
                 margin-bottom: 15px
                 padding-bottom: 15px
+
+            .main-list-label
+                font-size: 13px
+                letter-spacing: 2px
+            
+            .main-list-title
+                font-size: 19px
 
     .container2c
         padding: 15px
@@ -123,11 +137,12 @@ li
 .author
     font-size: 10px
     border-bottom: 0.5px solid rgba(180,180,180,0.5)
+    margin-top: 5px
     margin-bottom: 20px
     padding-bottom: 20px
 
 .aside-left-main
-    font-size: 25px
+    font-size: 28px
 
 a
     color: black
